# MUSICAPP

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
design/mockups/: main-screen.html
docs/: effects-catalog.md
docs/superpowers/specs/: 2026-06-29-cabinet-ir-design.md  2026-06-29-model-browser-design.md  2026-06-29-webview-ui-design.md
platform/macos/: README.md  build.sh
platform/windows/: README.md  build.ps1
src/: ModelBrowser.cpp  ModelBrowser.h  ModelLibrary.cpp  ModelLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebUIEditor.cpp  WebUIEditor.h
src/fx/: FxBlock.h  FxChain.cpp  FxChain.h  FxFactory.cpp  FxFactory.h  FxHost.h
src/fx/blocks/: FxAmpRef.h  FxBBD.h  FxCabRef.h  FxChorus.h  FxDelay.h  FxDrive.h  FxDuckReverb.h  FxDucking.h  FxFlanger.h  FxGatedReverb.h  FxHall.h  FxHarmTremolo.h  FxMultiTap.h  FxOctaver.h  FxPhaser.h  FxPitch.h  FxPlate.h  FxReverb.h  FxReverse.h  FxRingMod.h  FxSweep.h  FxTapeEcho.h  FxTremolo.h  FxUniVibe.h  FxVibrato.h
ui/: app.js  index.html  style.css
